- Fixed bug #30120 (imagettftext() and imagettfbbox() accept too many parameters)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@177262 c90b9560-bf6c-de11-be94-00142212c4b1